Fix navigation mobile issues - Align menu icon to the right - Remove space between menu icon and user icon Those changes also fix the navigation layout overall

--- a/src/app/_components/nav/nav.component.sass
+++ b/src/app/_components/nav/nav.component.sass
@@ -102,6 +102,7 @@
 
 .user-nav-wrapper
   position: relative
+  margin-left: 1rem
   &__sub-container
     position: absolute
     display: block
